WPT failures in css/css-grid/grid-definition with repeat(auto-fill/auto-fit, ...)
Categories
(Core :: Layout: Grid, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox131 | --- | fixed |
People
(Reporter: twisniewski, Assigned: alaskanemily)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
These WPTs seem to be failing due to us apparently not handing CSS like this: repeat(auto-fill, 50px)
, or repeat(auto-fit, minmax(50px, 25px))
as the tests expect;
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-fill-columns-001.html
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-fill-rows-001.html
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-fit-columns-001.html
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-fit-rows-001.html
These also seem potentially related:
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-repeat-max-size-002.html
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-repeat-min-size-004.html
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-repeat-min-size-004.html
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-repeat-minmax.html
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-repeat-max-width-001.html
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-repeat-dynamic-001.html
- https://wpt.fyi/results/css/css-grid/grid-definition/grid-auto-repeat-dynamic-003.html *
- this one might also be related to aspect ratio issues, as in bug 1740236
I wonder if this is because of bug 1632578?
Reporter | ||
Updated•2 years ago
|
Updated•2 years ago
|
Reporter | ||
Updated•1 year ago
|
Comment hidden (obsolete) |
Assignee | ||
Comment 2•8 months ago
|
||
The first 4 plus grid-auto-repeat-minmax.html are all caused by us not measuring repeat(.., minmax) where max < min correctly.
The others might actually be parsing or serialization related, but I'm unsure (I will be looking into them once the minmax fix is done). Definitely a different cause.
Assignee | ||
Updated•8 months ago
|
Assignee | ||
Comment 3•8 months ago
|
||
This was already happening correctly when placing grid items, but it was not
implemented correctly when measuring the overal grid size.
Ideally, MaxSizingFor or some kind of replacement could do this kind of check
already. If you don't want to fiddle around with sizing functions then you
probably want to perform this check every time, and if you really need the
max sizing function directly you can just get it with SizingFor.
Comment 5•8 months ago
|
||
bugherder |
Description
•