Bug 1841677 - Fix incorrect flooring of grid auto-repeat with minmax(.., ..)) when max < min r=dholbert

This was already happening correctly when placing grid items, but it was not
implemented correctly when measuring the overal grid size.

Ideally, MaxSizingFor or some kind of replacement could do this kind of check
already. If you don't want to fiddle around with sizing functions then you
probably want to perform this check every time, and if you really need the
max sizing function directly you can just get it with SizingFor.

Differential Revision: https://phabricator.services.mozilla.com/D220196